Added an endpoint for creating a bucket

--- a/minio-java-sdk-demo/src/main/resources/application.properties
+++ b/minio-java-sdk-demo/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+minio.endpoint-url=http://localhost:9000
+minio.access-key=AKIAIOSFODNN7EXAMPLE
+minio.secret-key=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
